--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  android_alarm_manager_plus: ^3.0.4
+  shared_preferences: ^2.2.2
+  flutter_riverpod: ^2.4.9
+  intl: ^0.18.1
+  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   flutter_test:
