--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <!-- For apps with targetSDK=31 (Android 12) -->
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".MyApp"
@@ -37,33 +38,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <!--        <service-->
-        <!--            android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmService"-->
-        <!--            android:permission="android.permission.BIND_JOB_SERVICE"-->
-        <!--            android:exported="false"/>-->
-        <!--        <receiver-->
-        <!--            android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmBroadcastReceiver"-->
-        <!--            android:exported="false"/>-->
-        <!--        <receiver-->
-        <!--            android:name="dev.fluttercommunity.plus.androidalarmmanager.RebootBroadcastReceiver"-->
-        <!--            android:enabled="false"-->
-        <!--            android:exported="false">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.intent.action.BOOT_COMPLETED" />-->
-        <!--            </intent-filter>-->
-        <!--        </receiver>-->
-        <!--        <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />-->
-        <!--        <receiver-->
-        <!--            android:exported="false"-->
-        <!--            android:name="com.dexterous.flutterlocalnotifications.ActionBroadcastReceiver" />-->
-        <!--        <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.intent.action.BOOT_COMPLETED"/>-->
-        <!--                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>-->
-        <!--                <action android:name="android.intent.action.QUICKBOOT_POWERON" />-->
-        <!--                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>-->
-        <!--            </intent-filter>-->
-        <!--        </receiver>-->
         <activity
             android:name=".FullScreenActivity"
             android:showOnLockScreen="true" />
