--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   intl: ^0.18.1
   flutter_local_notifications: ^16.2.0
+#  mobile_scanner: ^3.5.6
 
 dev_dependencies:
   flutter_test:
